[package]
name = "ck3spell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speller = { version = "0.1.0", path = "../speller" }

anyhow = "1.0"
clap = { version = "3.2.12", features = ["derive"] }
druid = { git = "https://github.com/linebender/druid.git" }
home = "0.5"
nom = "7"
nom_locate = "4"
