[package]
name = "ck3spell"
version = "0.1.0"
edition = "2021"

authors = ["Richard Braakman <shuttlegit@gmail.com>"]
description = "A spelling checker for Crusader Kings 3 user mods"
repository = "https://github.com/amtep/ck3spell"
license = "gpl-3.0-or-later"

[dependencies]
speller = { version = "0.1.0", path = "../speller" }

anyhow = "1.0"
clap = { version = "3.2.12", features = ["derive"] }
druid = { git = "https://github.com/linebender/druid.git" }
nu-glob = "0.66"
home = "0.5"
nom = "7"
nom_locate = "4"
