[package]
name = "speller"
version = "0.1.2"
edition = "2021"

authors = ["Richard Braakman <shuttlegit@gmail.com>"]
description = "A spellchecker library that uses hunspell-format dictionaries"
repository = "https://github.com/amtep/ck3spell/tree/main/speller"
license = "gpl-3.0-or-later"

[dependencies]
anyhow = "1.0"
bitflags = "2.3"
caseless = { version = "0.2", git = "https://github.com/amtep/rust-caseless" }
encoding = "0.2"
fnv = "1"
itertools = "0.11"
nom = "7"
rayon = "1.5.3"
smallvec = "1.9"
unicode-casing = "0.1.0"
unicode_titlecase = "2.2.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "criterion"
harness = false
